feat: Configuração específica Monday.com + Google Gemini
🎯 FOCO ESPECÍFICO:
- Extensão agora é focada em Monday.com + Google Gemini
- Configurações pré-definidas para uso imediato
- Sem mais mensagem de boas-vindas - direto ao chat

🧠 GOOGLE GEMINI INTEGRADO:
- Suporte completo para Google Gemini 1.5 Flash
- API key pré-configurada: AIzaSyBKdGouQzBbm6Dwm5pyPhDt2MCUpDPGAig
- Formato de requisição/resposta específico do Gemini
- Base URL: https://generativelanguage.googleapis.com/v1beta

📋 MONDAY.COM MCP:
- Servidor MCP dedicado para Monday API
- Token pré-configurado para Monday.com
- 5 ferramentas específicas: boards, items, create, update, users
- WebSocket server em localhost:8080/mcp

✨ MUDANÇAS NA UI:
- Título alterado para 'Monday Chat'
- Labels específicos: 'Monday Token', 'Google API Key'
- Botões: 'Testar Monday', 'Testar Gemini'
- Remoção de elementos genéricos

🔧 ARQUIVOS CRIADOS/MODIFICADOS:
- monday-mcp-server.js: Servidor WebSocket para Monday API
- package.json: Scripts para Monday MCP server
- js/popup.js: Suporte Google Gemini + configs pré-definidas
- popup.html: UI específica Monday + Google
- QUICK_START.md: Guia completo Monday + Gemini

🚀 RESULTADO:
- Extensão pronta para usar (sem configuração inicial)
- Foco total em produtividade Monday.com
- Powered by Google Gemini 1.5 Flash
- Zero configuração necessária pelo usuário

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
             <div class="header-content">
                 <div class="logo">
                     <span class="logo-icon">🤖</span>
-                    <span class="logo-text">MCP Chat</span>
+                    <span class="logo-text">Monday Chat</span>
                 </div>
                 <div class="header-actions">
                     <button id="settingsBtn" class="icon-btn" title="Configurações">
@@ -50,24 +50,25 @@
                 <div class="settings-content">
                     <!-- MCP Configuration -->
                     <div class="config-section">
-                        <h4>🔗 Servidor MCP</h4>
+                        <h4>📋 Monday.com MCP</h4>
                         <div class="form-group">
                             <label for="mcpUrl">URL do Servidor:</label>
                             <input type="url" id="mcpUrl" placeholder="ws://localhost:8080/mcp" />
                         </div>
                         <div class="form-group">
-                            <label for="mcpApiKey">API Key (opcional):</label>
-                            <input type="password" id="mcpApiKey" placeholder="Sua API key..." />
+                            <label for="mcpApiKey">Monday Token:</label>
+                            <input type="password" id="mcpApiKey" placeholder="Token do Monday.com..." />
                         </div>
-                        <button id="testMcpConnection" class="btn btn-secondary">Testar Conexão</button>
+                        <button id="testMcpConnection" class="btn btn-secondary">Testar Monday</button>
                     </div>
 
                     <!-- LLM Configuration -->
                     <div class="config-section">
-                        <h4>🧠 Modelo LLM</h4>
+                        <h4>🧠 Google Gemini</h4>
                         <div class="form-group">
                             <label for="llmProvider">Provedor:</label>
                             <select id="llmProvider">
+                                <option value="google">Google Gemini</option>
                                 <option value="openai">OpenAI</option>
                                 <option value="anthropic">Anthropic (Claude)</option>
                                 <option value="local">Local/Ollama</option>
@@ -75,18 +76,18 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="llmApiKey">API Key:</label>
-                            <input type="password" id="llmApiKey" placeholder="Sua API key..." />
+                            <label for="llmApiKey">Google API Key:</label>
+                            <input type="password" id="llmApiKey" placeholder="AIzaSy..." />
                         </div>
                         <div class="form-group">
                             <label for="llmModel">Modelo:</label>
-                            <input type="text" id="llmModel" placeholder="gpt-4, claude-3-sonnet, etc." />
+                            <input type="text" id="llmModel" placeholder="gemini-1.5-flash, gemini-1.5-pro" />
                         </div>
                         <div class="form-group">
-                            <label for="llmBaseUrl">Base URL (para custom/local):</label>
-                            <input type="url" id="llmBaseUrl" placeholder="http://localhost:11434/v1" />
+                            <label for="llmBaseUrl">Base URL:</label>
+                            <input type="url" id="llmBaseUrl" placeholder="https://generativelanguage.googleapis.com/v1beta" />
                         </div>
-                        <button id="testLlmConnection" class="btn btn-secondary">Testar LLM</button>
+                        <button id="testLlmConnection" class="btn btn-secondary">Testar Gemini</button>
                     </div>
 
                     <!-- Advanced Settings -->
